<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/ic_background">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/MainComment"
        android:textColor="@color/colorPrimaryDarkGrey"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.055" />

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:foregroundGravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.circularreveal.CircularRevealGridLayout
            android:id="@+id/grid_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:columnCount="2"
            android:foregroundGravity="center"
            android:rowCount="2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/btnSh1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="45dp"
                android:layout_marginBottom="25dp"
                android:text="@string/SH1"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btnSh2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/SH2"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btnSh3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/SH3"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btnSh4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/SH4"
                android:textSize="30sp" />

        </com.google.android.material.circularreveal.CircularRevealGridLayout>


    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>